{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 1179,
  "lineage": "712ac560-e408-d3cd-ffcb-37ad15a500e5",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:security-group/sg-00b49b1ef4f26f2de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b49b1ef4f26f2de",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "D247-prod-load_balancer-sg",
            "name_prefix": "",
            "owner_id": "220479146103",
            "revoke_rules_on_delete": false,
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-load_balancer-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-load_balancer-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:security-group/sg-07b3219529a789c85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b3219529a789c85",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "D247-prod-web-sg",
            "name_prefix": "",
            "owner_id": "220479146103",
            "revoke_rules_on_delete": false,
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-web-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-web-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:security-group/sg-08c9ce7380f61497a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c9ce7380f61497a",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "D247-prod-web_mobile-sg",
            "name_prefix": "",
            "owner_id": "220479146103",
            "revoke_rules_on_delete": false,
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-web_mobile-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-web_mobile-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:security-group/sg-05a065e3551eb6395",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a065e3551eb6395",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "D247-prod-app-sg",
            "name_prefix": "",
            "owner_id": "220479146103",
            "revoke_rules_on_delete": false,
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-app-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-app-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:security-group/sg-0ae17a5655c7f23eb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae17a5655c7f23eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "D247-prod-app_mobile-sg",
            "name_prefix": "",
            "owner_id": "220479146103",
            "revoke_rules_on_delete": false,
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-app_mobile-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-app_mobile-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:security-group/sg-07bbdc00061d4d377",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bbdc00061d4d377",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "D247-prod-back_office-sg",
            "name_prefix": "",
            "owner_id": "220479146103",
            "revoke_rules_on_delete": false,
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-back_office-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-back_office-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:security-group/sg-0c3e6ba822fcda6d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3e6ba822fcda6d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "136.226.252.102/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "D247-prod-database-sg",
            "name_prefix": "",
            "owner_id": "220479146103",
            "revoke_rules_on_delete": false,
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-database-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-database-sg",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:route-table/rtb-082f11e176f4f439e",
            "id": "rtb-082f11e176f4f439e",
            "owner_id": "220479146103",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-PrivateRT",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-PrivateRT",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03499c74be8d29ae0",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0b26a695148a0631e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072b8e20fde5c1f59",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-036a5d4e45b0d066e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b87c604421cd8225",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0235ab9a7019ee536"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5362bf1a4d33bf9",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0120dd8e12342a257"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b30285cd38136b2",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0ec9734c105df24fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd283ff543c7ebed",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0cf378180f2d5db54"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7bfa9aa21b74d15",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-06c24b9e5b27746b9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb410adace5e7753",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0382862809c9d0760"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3202081e4654d4f",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-05fa7c6d76cbb5dbb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018bf1ebd6060ffca",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0543260544e8b4faf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef65ba73158755b",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-04449e9b9535c02cd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0183fa3d9aef1dab9",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-09794cfc83bc7619c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83090fbc956030e",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0948031f6779c66a1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fdaa5b59141819b",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-001fc683758f408b1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2837fd153f0fb5c",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-099b5000a2b8d9a98"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fa341d0c791829e",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0b0e86d77528af9a8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f1176556279a858",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0cab03e8fe7b1c897"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0862ffdc81c1f1306",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0b1f0e9bdae99c8f9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac6c5e72b334b728",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-036cb2a6ed46f2906"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047848bc48da494de",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-08560af0722f686fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0396bb6e2bd8e1d18",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-00311048137b3bd8f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00056a831737e6a2f",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-02a7a83840e033e17"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc358fd4ee1f528e",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0f44ddb52c50df47a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027eef9a727bf4a0d",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-005c8047ebeeafcf8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddfce3386e245cf9",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-041531fdd572668cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aaa99c266c8d59c",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0cbcafb62cc3e12d3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088390edeafb12982",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-07c3303b2251439d8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004ffc384c96a7d5b",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0439e527378d43f5d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb4f2f61c3df8487",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-08edb4d63af67db01"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01796007da80fb053",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0b5c1cac405fa5967"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054a908cec6a2a8aa",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0e0400fc4db4129d1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c526124971aa69c2",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-08c64a2dc317d613a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf2f6779fdc5d9df",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-017eea8cbe94d3303"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a72b6f47653bd68",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0952f2571e7cb437c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf0c31252a9f09b6",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0ef0a77af7b4844f5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056fb855107cf5829",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-03c7ecfce5c9befcd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae1db272d4e4d082",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0fbf8931faebdb5de"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d4c59c277c53d41",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-06a30088afd457f6a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054367c778975f5eb",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-04fe79fcce7123a36"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000dd80c7965c688d",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-02ccb906c966be3c8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dd9ec2511e6a4f3",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0ac526f94ed9aaf57"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9ffb50dcab3d551",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0b848f7c092919909"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03046a6fb52bd32ad",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-02a2093a68019e88f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d5add5352a16aed",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-09dc44d5fcaef9a7d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e468954ce1443b46",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-08394ea0a2f3e221f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b84172b7a7f68ddf",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-099029bd37db27abb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de6ec4df74d6a50e",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0b82465c8f8c919aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d70db921484ec63b",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-02278debc1f287b15"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071e4e346b8e953b5",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-0cf5812f6c9f1a4b0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009757b8068912d04",
            "route_table_id": "rtb-082f11e176f4f439e",
            "subnet_id": "subnet-02cd423c0e058d362"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRT_az1",
            "module.vpc.aws_subnet.private_subnets_az2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "additional_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0d1be42c63fdf8b17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1be42c63fdf8b17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-1-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-1-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-081c14b45f310ec8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081c14b45f310ec8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-2-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-2-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0ac4fd34212ee0da3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac4fd34212ee0da3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-3-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-3-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-002bab4d59197c951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002bab4d59197c951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-4-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-GCOReserve-Subnet-4-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0b26a695148a0631e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b26a695148a0631e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-1-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-1-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-036a5d4e45b0d066e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036a5d4e45b0d066e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-2-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-2-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0235ab9a7019ee536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0235ab9a7019ee536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-3-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-3-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0120dd8e12342a257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.160/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0120dd8e12342a257",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-4-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-4-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0ec9734c105df24fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec9734c105df24fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-5-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-5-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0cf378180f2d5db54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf378180f2d5db54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-6-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-6-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-06c24b9e5b27746b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c24b9e5b27746b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-7-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-7-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0382862809c9d0760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0382862809c9d0760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-8-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-8-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-05fa7c6d76cbb5dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa7c6d76cbb5dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-9-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-9-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0543260544e8b4faf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0543260544e8b4faf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-10-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-10-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-04449e9b9535c02cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.224/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04449e9b9535c02cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-11-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-11-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-09794cfc83bc7619c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09794cfc83bc7619c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-12-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-12-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0948031f6779c66a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0948031f6779c66a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-13-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-13-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-001fc683758f408b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001fc683758f408b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-14-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-14-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-099b5000a2b8d9a98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.192/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b5000a2b8d9a98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-15-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-15-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0b0e86d77528af9a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.160/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0e86d77528af9a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-16-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-16-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0cab03e8fe7b1c897",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.192/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cab03e8fe7b1c897",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-17-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-17-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0b1f0e9bdae99c8f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f0e9bdae99c8f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-18-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-18-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-036cb2a6ed46f2906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.224/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036cb2a6ed46f2906",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-19-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-19-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-08560af0722f686fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08560af0722f686fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-20-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-20-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-00311048137b3bd8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00311048137b3bd8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-21-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1a-21-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-02a7a83840e033e17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7a83840e033e17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-22-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1a-22-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0f44ddb52c50df47a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44ddb52c50df47a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-23-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1a-23-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-005c8047ebeeafcf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.160/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005c8047ebeeafcf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-24-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1a-24-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-041531fdd572668cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041531fdd572668cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-25-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1a-25-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0cbcafb62cc3e12d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbcafb62cc3e12d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-1-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-1-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-07c3303b2251439d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.144/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c3303b2251439d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-2-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-2-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0439e527378d43f5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0439e527378d43f5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-3-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-3-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-08edb4d63af67db01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.176/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08edb4d63af67db01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-4-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-4-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0b5c1cac405fa5967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c1cac405fa5967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-5-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-5-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0e0400fc4db4129d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0400fc4db4129d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-6-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-6-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-08c64a2dc317d613a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c64a2dc317d613a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-7-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-7-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-017eea8cbe94d3303",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017eea8cbe94d3303",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-8-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-8-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0952f2571e7cb437c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0952f2571e7cb437c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-9-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-9-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0ef0a77af7b4844f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef0a77af7b4844f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-10-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-10-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-03c7ecfce5c9befcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c7ecfce5c9befcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-11-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-11-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0fbf8931faebdb5de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbf8931faebdb5de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-12-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-12-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-06a30088afd457f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a30088afd457f6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-13-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-13-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-04fe79fcce7123a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fe79fcce7123a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-14-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-14-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-02ccb906c966be3c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.208/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ccb906c966be3c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-15-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-15-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0ac526f94ed9aaf57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.176/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac526f94ed9aaf57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-16-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-16-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0b848f7c092919909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.208/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b848f7c092919909",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-17-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-17-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-02a2093a68019e88f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a2093a68019e88f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-18-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-18-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-09dc44d5fcaef9a7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dc44d5fcaef9a7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-19-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-19-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-08394ea0a2f3e221f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.144/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08394ea0a2f3e221f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-20-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-20-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-099029bd37db27abb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099029bd37db27abb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-21-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-web-us-east-1b-21-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0b82465c8f8c919aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.144/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b82465c8f8c919aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-22-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-app-us-east-1b-22-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-02278debc1f287b15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02278debc1f287b15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-23-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-backoffice-us-east-1b-23-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-0cf5812f6c9f1a4b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.176/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf5812f6c9f1a4b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-24-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-database-us-east-1b-24-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:subnet/subnet-02cd423c0e058d362",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cd423c0e058d362",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220479146103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-25-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-alb-us-east-1b-25-prod",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-080ac0b14065dd2f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220479146103:vpc/vpc-080ac0b14065dd2f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/22",
            "default_network_acl_id": "acl-0dccea19860f58e9d",
            "default_route_table_id": "rtb-0700c90ce7145a7d1",
            "default_security_group_id": "sg-0fd7e79d3f9a33abf",
            "dhcp_options_id": "dopt-0b4ea07d2b65bacfa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080ac0b14065dd2f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0700c90ce7145a7d1",
            "owner_id": "220479146103",
            "tags": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-vpc",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "BudgetCode": "Deluxe",
              "Dept": "Deluxe",
              "Name": "D247-prod-vpc",
              "Owner": "D247",
              "Project": "D247",
              "Stack": "DEV",
              "managed_by": "Terraform"
            }
          }
        }
      ]
    }
  ]
}